--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#0a192f" />
+    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Planet Yazılım - ERP, E-Dönüşüm ve İş Süreçleri Yönetimi çözümleriyle işletmenizi geleceğe hazırlıyoruz."
@@ -13,6 +13,7 @@
     <meta name="author" content="Planet Yazılım" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <title>Planet Yazılım | Kurumsal Yazılım Çözümleri</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -29,7 +30,7 @@
 
       body {
         overflow-x: hidden;
-        background: #0a192f;
+        background: #000000;
       }
 
       #root {
@@ -47,7 +48,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background: #0a192f;
+        background: #000000;
         z-index: 9999;
       }
 
